started create snippets
